# fskc

./: .gitignore  Cargo.toml  DESIGN_HARDWARE_POST_QUANTUM_HIGH_SECURITY.md  DESIGN_HARDWARE_POST_QUANTUM_LOW_SECURITY.md  DESIGN_PART1.md  DESIGN_PART2.md  LICENSE_MANIFESTO.md  README.md  SECURITY_STATE_MODEL.md  SECURITY_STATE_MODEL_v2.md
.github/workflows/: ci.yml
benches/: avr_benchmarks.rs  compute_benchmarks.rs  encryption_benchmarks.rs
docs/: inside_out_crypto.md  library_extensions.md  secure_applications.md  uefi_integration.md  zkp_pfs_design.md
examples/: basic_usage.rs  binary_container_example.rs  compute_example.rs  context_establishment.rs  enclave_example.rs  holographic_example.rs  homomorphic_example.rs  inside_out_example.rs  ios_sensor_entropy.rs  key_exchange.rs  key_generation.rs  key_recovery.rs  key_rotation.rs  microcontroller_example.rs  pairlet_validation.rs  sensor_entropy.rs  triplet_verification.rs  vm_example.rs  zkp_container_example.rs
src/: crypto.rs  error.rs  fractal.rs  lib.rs  roving.rs  utils.rs
src/binary_container/: mod.rs
src/enclave/: mod.rs
src/entropy/: ios_sensor.rs  mod.rs  sensor.rs
src/holographic/: compute.rs  homomorphic.rs  mod.rs
src/inside_out/: mod.rs
src/layered/: config.rs  layer.rs  mod.rs
src/microcontroller/: cpu.rs  error.rs  instructions.rs  memory.rs  mod.rs
src/pairlet/: context.rs  exchange.rs  keygen.rs  mod.rs  recovery.rs  rotation.rs
src/triplet/: mod.rs
src/vm/: mod.rs
src/zkp_container/: mod.rs
tests/: integration_tests.rs
